add: jlink configuration, modularization and windows build settings